--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-pr-branch-links",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "description": "Open in a new tab the clicked branch on a pull request page.",
   "main": "script.js",
   "scripts": {
@@ -57,6 +57,8 @@
     "menu/",
     "cli.js",
     "index.js",
+    "index.d.ts",
+    "package-lock.json",
     "bloggify.js",
     "bloggify.json",
     "bloggify/"
